--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <h1>AniHunter</h1>
@@ -20,6 +20,6 @@
 
     <div id="search_results"></div>
 
-    <script src="script.js"></script>
+    <script src="./javascript/script.js"></script>
   </body>
 </html>
